--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "bin/modules/charclass"]
 	path = bin/modules/charclass
 	url = git://github.com/wakaba/perl-charclass
+[submodule "bin/modules/web-css"]
+	path = bin/modules/web-css
+	url = git://github.com/manakai/perl-web-css
+[submodule "bin/modules/json-functions-xs"]
+	path = bin/modules/json-functions-xs
+	url = git://github.com/wakaba/perl-json-functions-xs
