Added <isindex> data

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bin/modules/json-functions-xs"]
 	path = bin/modules/json-functions-xs
 	url = git://github.com/wakaba/perl-json-functions-xs
+[submodule "bin/modules/web-encodings"]
+	path = bin/modules/web-encodings
+	url = git://github.com/manakai/perl-web-encodings
