--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ notifications:
     channels:
       - "irc.suikawiki.org#mechanize"
     use_notice: true
+env:
+  global:
+    secure: "YKsGunVUaTE2cgEMRU643mZQ38m/h0vGweg/h8+koGgJf1Eu8R5OakYrtkjQkY93ARPYadhDtYwhbXX63PPmVvpJrcOZtVLktdLc84kfB4DA4Xt+KclPmPWO1fUmDSgY8fhZ4qx0xDcRDdDyNQ7rwW6+KGhCoDeMK/Y9JxBZkys="
+after_success:
+  - curl https://gist.githubusercontent.com/wakaba/9970857/raw/travis-merger.pl | perl
