Replace JSON module; Updater for submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,24 @@
 [submodule "bin/modules/web-dom"]
 	path = bin/modules/web-dom
 	url = git://github.com/manakai/perl-web-dom
+	track = master
 [submodule "bin/modules/web-markup"]
 	path = bin/modules/web-markup
 	url = git://github.com/manakai/perl-web-markup
+	track = master
 [submodule "bin/modules/charclass"]
 	path = bin/modules/charclass
 	url = git://github.com/wakaba/perl-charclass
+	track = master
 [submodule "bin/modules/web-css"]
 	path = bin/modules/web-css
 	url = git://github.com/manakai/perl-web-css
-[submodule "bin/modules/json-functions-xs"]
-	path = bin/modules/json-functions-xs
-	url = git://github.com/wakaba/perl-json-functions-xs
+	track = master
 [submodule "bin/modules/web-encodings"]
 	path = bin/modules/web-encodings
 	url = git://github.com/manakai/perl-web-encodings
+	track = master
 [submodule "bin/modules/web-url"]
 	path = bin/modules/web-url
 	url = git://github.com/manakai/perl-web-url
+	track = master
