DOM API data from HTML Standard

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = bin/modules/web-url
 	url = git://github.com/manakai/perl-web-url
 	track = master
+[submodule "bin/modules/web-js"]
+	path = bin/modules/web-js
+	url = git://github.com/manakai/perl-web-js
+	track = master
