--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -51,6 +51,7 @@
    "3g2" : {
       "mime_type" : "video/3gpp2",
       "mime_types" : {
+         "audio/3gpp2" : 1,
          "video/3gpp2" : 1
       }
    },
@@ -81,6 +82,7 @@
    "3gpp2" : {
       "mime_type" : "video/3gpp2",
       "mime_types" : {
+         "audio/3gpp2" : 1,
          "video/3gpp2" : 1
       }
    },
@@ -121,6 +123,12 @@
          "audio/audible" : 1
       }
    },
+   "aa3" : {
+      "mime_type" : "audio/atrac-advanced-lossless",
+      "mime_types" : {
+         "audio/atrac-advanced-lossless" : 1
+      }
+   },
    "aab" : {
       "mime_type" : "application/x-authorware-bin",
       "mime_types" : {
@@ -138,6 +146,12 @@
       "mime_type" : "application/octet-stream",
       "mime_types" : {
          "application/octet-stream" : 1
+      }
+   },
+   "aal" : {
+      "mime_type" : "audio/atrac-advanced-lossless",
+      "mime_types" : {
+         "audio/atrac-advanced-lossless" : 1
       }
    },
    "aam" : {
@@ -729,6 +743,12 @@
          "application/atomcat\u002Bxml" : 1
       }
    },
+   "atomdeleted" : {
+      "mime_type" : "application/atomdeleted\u002Bxml",
+      "mime_types" : {
+         "application/atomdeleted\u002Bxml" : 1
+      }
+   },
    "atomsrv" : {
       "mime_type" : "application/x-atomserv\u002Bxml",
       "mime_types" : {
@@ -752,6 +772,12 @@
       "mime_types" : {
          "audio/basic" : 1,
          "audio/x-au" : 1
+      }
+   },
+   "auc" : {
+      "mime_type" : "application/tamp-apex-update-confirm",
+      "mime_types" : {
+         "application/tamp-apex-update-confirm" : 1
       }
    },
    "avf" : {
@@ -1237,6 +1263,12 @@
          "text/x-cobol" : 1
       }
    },
+   "cbor" : {
+      "mime_type" : "application/cbor",
+      "mime_types" : {
+         "application/cbor" : 1
+      }
+   },
    "cbr" : {
       "mime_type" : "application/x-cbr",
       "mime_types" : {
@@ -1276,6 +1308,12 @@
       "mime_type" : "text/vnd.net2phone.commcenter.command",
       "mime_types" : {
          "text/vnd.net2phone.commcenter.command" : 1
+      }
+   },
+   "ccmp" : {
+      "mime_type" : "application/ccmp\u002Bxml",
+      "mime_types" : {
+         "application/ccmp\u002Bxml" : 1
       }
    },
    "ccmx" : {
@@ -1637,6 +1675,12 @@
          "image/x-cmx" : 1
       }
    },
+   "cnd" : {
+      "mime_type" : "text/jcr-cnd",
+      "mime_types" : {
+         "text/jcr-cnd" : 1
+      }
+   },
    "cnf" : {
       "mime_type" : "text/plain",
       "mime_types" : {
@@ -1911,6 +1955,12 @@
          "x-chemical/x-gaussian-cube" : 1
       }
    },
+   "cuc" : {
+      "mime_type" : "application/tamp-community-update-confirm",
+      "mime_types" : {
+         "application/tamp-community-update-confirm" : 1
+      }
+   },
    "cue" : {
       "mime_type" : "application/x-cue",
       "mime_types" : {
@@ -2097,6 +2147,13 @@
       "mime_type" : "application/vnd.fujixerox.ddd",
       "mime_types" : {
          "application/vnd.fujixerox.ddd" : 1
+      }
+   },
+   "ddf" : {
+      "mime_type" : "application/vnd.syncml.dmddf\u002Bxml",
+      "mime_types" : {
+         "application/vnd.syncml.dmddf\u002Bwbxml" : 1,
+         "application/vnd.syncml.dmddf\u002Bxml" : 1
       }
    },
    "dds" : {
@@ -2543,6 +2600,12 @@
       "mime_type" : "video/vnd.dvb.file",
       "mime_types" : {
          "video/vnd.dvb.file" : 1
+      }
+   },
+   "dvc" : {
+      "mime_type" : "application/dvcs",
+      "mime_types" : {
+         "application/dvcs" : 1
       }
    },
    "dvi" : {
@@ -3197,6 +3260,12 @@
          "application/xml" : 1
       }
    },
+   "finf" : {
+      "mime_type" : "application/fastinfoset",
+      "mime_types" : {
+         "application/fastinfoset" : 1
+      }
+   },
    "fits" : {
       "mime_type" : "image/fits",
       "mime_types" : {
@@ -3258,6 +3327,7 @@
    "flv" : {
       "mime_type" : "video/x-flv",
       "mime_types" : {
+         "flv-application/octet-stream" : 1,
          "video/x-flv" : 1
       }
    },
@@ -3846,6 +3916,12 @@
          "application/x-font-type1" : 1
       }
    },
+   "gsheet" : {
+      "mime_type" : "application/urc-grpsheet\u002Bxml",
+      "mime_types" : {
+         "application/urc-grpsheet\u002Bxml" : 1
+      }
+   },
    "gsm" : {
       "mime_type" : "audio/x-gsm",
       "mime_types" : {
@@ -4020,6 +4096,12 @@
          "text/x-hdml" : 1
       }
    },
+   "heldxml" : {
+      "mime_type" : "application/held\u002Bxml",
+      "mime_types" : {
+         "application/held\u002Bxml" : 1
+      }
+   },
    "help" : {
       "mime_type" : "application/x-helpfile",
       "mime_types" : {
@@ -4117,6 +4199,12 @@
       "mime_type" : "application/vnd.hp-hpgl",
       "mime_types" : {
          "application/vnd.hp-hpgl" : 1
+      }
+   },
+   "hpi" : {
+      "mime_type" : "application/vnd.hp-hpid",
+      "mime_types" : {
+         "application/vnd.hp-hpid" : 1
       }
    },
    "hpid" : {
@@ -5137,6 +5225,12 @@
          "application/json" : 1
       }
    },
+   "json-patch" : {
+      "mime_type" : "application/json-patch\u002Bjson",
+      "mime_types" : {
+         "application/json-patch\u002Bjson" : 1
+      }
+   },
    "json5" : {
       "mime_type" : "application/json5",
       "mime_types" : {
@@ -5664,6 +5758,12 @@
       "mime_types" : {
          "text/plain" : 1,
          "text/x-log" : 1
+      }
+   },
+   "lostsyncxml" : {
+      "mime_type" : "application/lostsync\u002Bxml",
+      "mime_types" : {
+         "application/lostsync\u002Bxml" : 1
       }
    },
    "lostxml" : {
@@ -6780,9 +6880,10 @@
       }
    },
    "mpf" : {
-      "mime_type" : "application/vnd.ms-mediapackage",
+      "mime_type" : "text/vnd.ms-mediapackage",
       "mime_types" : {
-         "application/vnd.ms-mediapackage" : 1
+         "application/vnd.ms-mediapackage" : 1,
+         "text/vnd.ms-mediapackage" : 1
       }
    },
    "mpg" : {
@@ -7615,6 +7716,12 @@
          "application/x-omdoc\u002Bxml" : 1
       }
    },
+   "omg" : {
+      "mime_type" : "audio/atrac-advanced-lossless",
+      "mime_types" : {
+         "audio/atrac-advanced-lossless" : 1
+      }
+   },
    "one" : {
       "mime_type" : "application/onenote",
       "mime_types" : {
@@ -8329,6 +8436,12 @@
          "image/x-pict" : 1
       }
    },
+   "pil" : {
+      "mime_type" : "application/vnd.piaccess.application-licence",
+      "mime_types" : {
+         "application/vnd.piaccess.application-licence" : 1
+      }
+   },
    "pir" : {
       "mime_type" : "application/x-pir",
       "mime_types" : {
@@ -8776,6 +8889,12 @@
          "application/octet-stream" : 1
       }
    },
+   "provx" : {
+      "mime_type" : "application/provenance\u002Bxml",
+      "mime_types" : {
+         "application/provenance\u002Bxml" : 1
+      }
+   },
    "prt" : {
       "mime_type" : "application/pro_eng",
       "mime_types" : {
@@ -8821,6 +8940,12 @@
          "application/photoshop" : 1,
          "image/vnd.adobe.photoshop" : 1,
          "image/x-photoshop" : 1
+      }
+   },
+   "pseg3820" : {
+      "mime_type" : "application/vnd.ibm.modcap",
+      "mime_types" : {
+         "application/vnd.ibm.modcap" : 1
       }
    },
    "psess" : {
@@ -9005,6 +9130,7 @@
    "qcp" : {
       "mime_type" : "audio/qcelp",
       "mime_types" : {
+         "audio/evrc-qcp" : 1,
          "audio/qcelp" : 1,
          "audio/vnd.qcelp" : 1
       }
@@ -9580,6 +9706,12 @@
          "application/x-rsd\u002Bxml" : 1
       }
    },
+   "rsheet" : {
+      "mime_type" : "application/urc-ressheet\u002Bxml",
+      "mime_types" : {
+         "application/urc-ressheet\u002Bxml" : 1
+      }
+   },
    "rss" : {
       "mime_type" : "application/rss\u002Bxml",
       "mime_types" : {
@@ -9744,6 +9876,12 @@
          "audio/s3m" : 1,
          "audio/x-mod" : 1,
          "audio/x-s3m" : 1
+      }
+   },
+   "sac" : {
+      "mime_type" : "application/tamp-sequence-adjust-confirm",
+      "mime_types" : {
+         "application/tamp-sequence-adjust-confirm" : 1
       }
    },
    "saf" : {
@@ -11211,6 +11349,12 @@
          "application/gnutar" : 1
       }
    },
+   "tau" : {
+      "mime_type" : "application/tamp-apex-update",
+      "mime_types" : {
+         "application/tamp-apex-update" : 1
+      }
+   },
    "taz" : {
       "mime_type" : "application/x-tarz",
       "mime_types" : {
@@ -11278,6 +11422,12 @@
          "text/x-script.tcsh" : 1
       }
    },
+   "tcu" : {
+      "mime_type" : "application/tamp-community-update",
+      "mime_types" : {
+         "application/tamp-community-update" : 1
+      }
+   },
    "teacher" : {
       "mime_type" : "application/vnd.smart.teacher",
       "mime_types" : {
@@ -11294,6 +11444,12 @@
       "mime_type" : "application/tei\u002Bxml",
       "mime_types" : {
          "application/tei\u002Bxml" : 1
+      }
+   },
+   "ter" : {
+      "mime_type" : "application/tamp-error",
+      "mime_types" : {
+         "application/tamp-error" : 1
       }
    },
    "testrunconfig" : {
@@ -11567,6 +11723,12 @@
          "video/vnd.dlna.mpeg-tts" : 1
       }
    },
+   "tsa" : {
+      "mime_type" : "application/tamp-sequence-adjust",
+      "mime_types" : {
+         "application/tamp-sequence-adjust" : 1
+      }
+   },
    "tsd" : {
       "mime_type" : "application/timestamped-data",
       "mime_types" : {
@@ -11588,6 +11750,20 @@
          "application/x-dsptype" : 1,
          "audio/tsplayer" : 1,
          "audio/x-tsplayer" : 1
+      }
+   },
+   "tsq" : {
+      "mime_type" : "application/timestamp-query",
+      "mime_types" : {
+         "application/tamp-status-query" : 1,
+         "application/timestamp-query" : 1
+      }
+   },
+   "tsr" : {
+      "mime_type" : "application/timestamp-reply",
+      "mime_types" : {
+         "application/tamp-status-response" : 1,
+         "application/timestamp-reply" : 1
       }
    },
    "tsv" : {
@@ -11650,6 +11826,18 @@
       "mime_type" : "application/t-time",
       "mime_types" : {
          "application/t-time" : 1
+      }
+   },
+   "tuc" : {
+      "mime_type" : "application/tamp-update-confirm",
+      "mime_types" : {
+         "application/tamp-update-confirm" : 1
+      }
+   },
+   "tur" : {
+      "mime_type" : "application/tamp-update",
+      "mime_types" : {
+         "application/tamp-update" : 1
       }
    },
    "turbot" : {
@@ -11762,6 +11950,12 @@
       "mime_type" : "text/x-uil",
       "mime_types" : {
          "text/x-uil" : 1
+      }
+   },
+   "uis" : {
+      "mime_type" : "application/urc-uisocketdesc\u002Bxml",
+      "mime_types" : {
+         "application/urc-uisocketdesc\u002Bxml" : 1
       }
    },
    "uls" : {
@@ -12864,6 +13058,12 @@
          "application/wlmoviemaker" : 1
       }
    },
+   "wlnk" : {
+      "mime_type" : "application/link-format",
+      "mime_types" : {
+         "application/link-format" : 1
+      }
+   },
    "wlpginstall" : {
       "mime_type" : "application/x-wlpg-detect",
       "mime_types" : {
@@ -13646,7 +13846,13 @@
       "mime_type" : "text/xml",
       "mime_types" : {
          "application/atom\u002Bxml" : 1,
+         "application/epp\u002Bxml" : 1,
          "application/rss\u002Bxml" : 1,
+         "application/vnd.iptc.g2.newsmessage\u002Bxml" : 1,
+         "application/vnd.iptc.g2.planningitem\u002Bxml" : 1,
+         "application/xcon-conference-info\u002Bxml" : 1,
+         "application/xcon-conference-info-diff\u002Bxml" : 1,
+         "application/xenc\u002Bxml" : 1,
          "application/xhtml\u002Bxml" : 1,
          "application/xml" : 1,
          "application/xml-external-parsed-entity" : 1,
