--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -1090,6 +1090,18 @@
          "application/x-bsh" : 1
       }
    },
+   "bsp" : {
+      "mime_type" : "model/vnd.valve.source.compiled-map",
+      "mime_types" : {
+         "model/vnd.valve.source.compiled-map" : 1
+      }
+   },
+   "btf" : {
+      "mime_type" : "image/prs.btif",
+      "mime_types" : {
+         "image/prs.btif" : 1
+      }
+   },
    "btif" : {
       "mime_type" : "image/prs.btif",
       "mime_types" : {
@@ -1740,6 +1752,12 @@
          "text/x-ms-contact" : 1
       }
    },
+   "copyright" : {
+      "mime_type" : "text/vnd.debian.copyright",
+      "mime_types" : {
+         "text/vnd.debian.copyright" : 1
+      }
+   },
    "coverage" : {
       "mime_type" : "application/xml",
       "mime_types" : {
@@ -1934,6 +1952,12 @@
       "mime_type" : "text/vbscript",
       "mime_types" : {
          "text/vbscript" : 1
+      }
+   },
+   "ctw" : {
+      "mime_type" : "model/vnd.gtw",
+      "mime_types" : {
+         "model/vnd.gtw" : 1
       }
    },
    "ctx" : {
@@ -5270,10 +5294,11 @@
       }
    },
    "jtd" : {
-      "mime_type" : "application/jxw",
+      "mime_type" : "text/vnd.esmertec.theme-descriptor",
       "mime_types" : {
          "application/jxw" : 1,
-         "application/x-js-taro" : 1
+         "application/x-js-taro" : 1,
+         "text/vnd.esmertec.theme-descriptor" : 1
       }
    },
    "jtw" : {
@@ -5583,6 +5608,12 @@
       "mime_types" : {
          "application/x-latex" : 1,
          "text/x-tex" : 1
+      }
+   },
+   "lbc" : {
+      "mime_type" : "audio/ilbc",
+      "mime_types" : {
+         "audio/ilbc" : 1
       }
    },
    "lbd" : {
@@ -6188,8 +6219,9 @@
       }
    },
    "markdown" : {
-      "mime_type" : "text/x-markdown",
+      "mime_type" : "text/markdown",
       "mime_types" : {
+         "text/markdown" : 1,
          "text/x-markdown" : 1
       }
    },
@@ -6304,8 +6336,9 @@
       }
    },
    "md" : {
-      "mime_type" : "text/x-markdown",
+      "mime_type" : "text/markdown",
       "mime_types" : {
+         "text/markdown" : 1,
          "text/x-markdown" : 1
       }
    },
@@ -8889,6 +8922,12 @@
          "application/octet-stream" : 1
       }
    },
+   "provn" : {
+      "mime_type" : "text/provenance-notation",
+      "mime_types" : {
+         "text/provenance-notation" : 1
+      }
+   },
    "provx" : {
       "mime_type" : "application/provenance\u002Bxml",
       "mime_types" : {
@@ -9132,6 +9171,7 @@
       "mime_types" : {
          "audio/evrc-qcp" : 1,
          "audio/qcelp" : 1,
+         "audio/smv-qcp" : 1,
          "audio/vnd.qcelp" : 1
       }
    },
@@ -11892,7 +11932,8 @@
    "txt" : {
       "mime_type" : "text/plain",
       "mime_types" : {
-         "text/plain" : 1
+         "text/plain" : 1,
+         "text/prs.fallenstein.rst" : 1
       }
    },
    "txz" : {
@@ -12025,6 +12066,12 @@
       "mime_type" : "text/uri-list",
       "mime_types" : {
          "text/uri-list" : 1
+      }
+   },
+   "uric" : {
+      "mime_type" : "text/vnd.si.uricatalogue",
+      "mime_types" : {
+         "text/vnd.si.uricatalogue" : 1
       }
    },
    "uris" : {
@@ -12566,6 +12613,12 @@
          "application/x-authorware-bin" : 1,
          "audio/voxware" : 1,
          "audio/x-voxware" : 1
+      }
+   },
+   "vpm" : {
+      "mime_type" : "multipart/voice-message",
+      "mime_types" : {
+         "multipart/voice-message" : 1
       }
    },
    "vqe" : {
@@ -13439,10 +13492,11 @@
       }
    },
    "x3dv" : {
-      "mime_type" : "model/x3d\u002Bvrml",
+      "mime_type" : "model/x3d-vrml",
       "mime_types" : {
          "model/x-x3d\u002Bvrml" : 1,
-         "model/x3d\u002Bvrml" : 1
+         "model/x3d\u002Bvrml" : 1,
+         "model/x3d-vrml" : 1
       }
    },
    "x3dvz" : {
@@ -13856,6 +13910,10 @@
          "application/xhtml\u002Bxml" : 1,
          "application/xml" : 1,
          "application/xml-external-parsed-entity" : 1,
+         "text/vnd.iptc.newsml" : 1,
+         "text/vnd.iptc.nitf" : 1,
+         "text/vnd.wap.si" : 1,
+         "text/vnd.wap.sl" : 1,
          "text/x-cross-domain-policy" : 1,
          "text/xml" : 1,
          "text/xml-external-parsed-entity" : 1
@@ -14134,6 +14192,12 @@
          "application/x-yaml" : 1,
          "text/x-yaml" : 1,
          "text/yaml" : 1
+      }
+   },
+   "ymp" : {
+      "mime_type" : "text/x-suse-ymp",
+      "mime_types" : {
+         "text/x-suse-ymp" : 1
       }
    },
    "z" : {
