--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -15170,6 +15170,12 @@
          "text/yaml" : 1
       }
    },
+   "ymp" : {
+      "mime_type" : "text/x-suse-ymp",
+      "mime_types" : {
+         "text/x-suse-ymp" : 1
+      }
+   },
    "z" : {
       "mime_type" : "application/x-compress",
       "mime_types" : {
