--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -13314,6 +13314,12 @@
          "application/x-yumekara" : 1
       }
    },
+   "vfr" : {
+      "mime_type" : "application/vnd.tml",
+      "mime_types" : {
+         "application/vnd.tml" : 1
+      }
+   },
    "vgm" : {
       "mime_type" : "video/x-videogram",
       "mime_types" : {
@@ -13348,6 +13354,12 @@
       "mime_type" : "application/x-labview-vi",
       "mime_types" : {
          "application/x-labview-vi" : 1
+      }
+   },
+   "viaframe" : {
+      "mime_type" : "application/vnd.tml",
+      "mime_types" : {
+         "application/vnd.tml" : 1
       }
    },
    "vif" : {
