--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -3876,6 +3876,12 @@
          "model/vnd.gdl" : 1
       }
    },
+   "gdoc" : {
+      "mime_type" : "application/vnd.google-apps.document",
+      "mime_types" : {
+         "application/vnd.google-apps.document" : 1
+      }
+   },
    "ged" : {
       "mime_type" : "application/x-gedcom",
       "mime_types" : {
@@ -4157,7 +4163,14 @@
    "gsheet" : {
       "mime_type" : "application/urc-grpsheet\u002Bxml",
       "mime_types" : {
-         "application/urc-grpsheet\u002Bxml" : 1
+         "application/urc-grpsheet\u002Bxml" : 1,
+         "application/vnd.google-apps.spreadsheet" : 1
+      }
+   },
+   "gslides" : {
+      "mime_type" : "application/vnd.google-apps.presentation",
+      "mime_types" : {
+         "application/vnd.google-apps.presentation" : 1
       }
    },
    "gsm" : {
