--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -11288,11 +11288,23 @@
          "application/vnd.openxmlformats-officedocument.presentationml.slide" : 1
       }
    },
+   "slim" : {
+      "mime_type" : "text/slim",
+      "mime_types" : {
+         "text/slim" : 1
+      }
+   },
    "slk" : {
       "mime_type" : "application/vnd.ms-excel",
       "mime_types" : {
          "application/vnd.ms-excel" : 1,
          "text/x-spreadsheet" : 1
+      }
+   },
+   "slm" : {
+      "mime_type" : "text/slim",
+      "mime_types" : {
+         "text/slim" : 1
       }
    },
    "sln" : {
