--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -2941,6 +2941,12 @@
          "application/vnd.novadigm.edx" : 1
       }
    },
+   "efi" : {
+      "mime_type" : "application/efi",
+      "mime_types" : {
+         "application/efi" : 1
+      }
+   },
    "efif" : {
       "mime_type" : "application/vnd.picsel",
       "mime_types" : {
