--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -82,6 +82,7 @@
    "3gpp" : {
       "mime_type" : "video/3gpp",
       "mime_types" : {
+         "audio/3gpp" : 1,
          "video/3gpp" : 1
       }
    },
