--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4069,6 +4069,7 @@
    "gpg" : {
       "mime_type" : "application/pgp-keys",
       "mime_types" : {
+         "application/octet-stream" : 1,
          "application/pgp-encrypted" : 1,
          "application/pgp-keys" : 1,
          "application/pgp-signature" : 1
