--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -7231,6 +7231,7 @@
    "mp3" : {
       "mime_type" : "audio/mpeg",
       "mime_types" : {
+         "audio/mp3" : 1,
          "audio/mpeg" : 1,
          "audio/mpeg3" : 1,
          "audio/x-mpeg-3" : 1,
