--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -1732,6 +1732,12 @@
          "text/x-tex" : 1
       }
    },
+   "clue," : {
+      "mime_type" : "application/clue_info\u002Bxml",
+      "mime_types" : {
+         "application/clue_info\u002Bxml" : 1
+      }
+   },
    "cmake" : {
       "mime_type" : "text/x-cmake",
       "mime_types" : {
