--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -3932,6 +3932,12 @@
          "application/vnd.dynageo" : 1
       }
    },
+   "geojson" : {
+      "mime_type" : "application/geo\u002Bjson",
+      "mime_types" : {
+         "application/geo\u002Bjson" : 1
+      }
+   },
    "gex" : {
       "mime_type" : "application/vnd.geometry-explorer",
       "mime_types" : {
