--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4953,6 +4953,12 @@
          "application/x-raw-disk-image" : 1
       }
    },
+   "imi" : {
+      "mime_type" : "application/vnd.imagemeter.image\u002Bzip",
+      "mime_types" : {
+         "application/vnd.imagemeter.image\u002Bzip" : 1
+      }
+   },
    "imp" : {
       "mime_type" : "application/vnd.accpac.simply.imp",
       "mime_types" : {
