--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -561,6 +561,12 @@
          "application/vnd.android.package-archive" : 1
       }
    },
+   "apng" : {
+      "mime_type" : "image/apng",
+      "mime_types" : {
+         "image/apng" : 1
+      }
+   },
    "appcache" : {
       "mime_type" : "text/cache-manifest",
       "mime_types" : {
