--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4952,6 +4952,12 @@
          "text/x-imelody" : 1
       }
    },
+   "imf" : {
+      "mime_type" : "application/vnd.imagemeter.folder\u002Bzip",
+      "mime_types" : {
+         "application/vnd.imagemeter.folder\u002Bzip" : 1
+      }
+   },
    "img" : {
       "mime_type" : "application/x-raw-disk-image",
       "mime_types" : {
