--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4023,6 +4023,18 @@
          "application/x-glade" : 1
       }
    },
+   "glb" : {
+      "mime_type" : "model/gltf-binary",
+      "mime_types" : {
+         "model/gltf-binary" : 1
+      }
+   },
+   "gltf" : {
+      "mime_type" : "model/gltf\u002Bjson",
+      "mime_types" : {
+         "model/gltf\u002Bjson" : 1
+      }
+   },
    "gml" : {
       "mime_type" : "application/gml\u002Bxml",
       "mime_types" : {
@@ -4359,6 +4371,12 @@
       "mime_type" : "application/vnd.altera.quartus.internal",
       "mime_types" : {
          "application/vnd.altera.quartus.internal" : 1
+      }
+   },
+   "hdd" : {
+      "mime_type" : "application/x-virtualbox-hdd",
+      "mime_types" : {
+         "application/x-virtualbox-hdd" : 1
       }
    },
    "hdf" : {
@@ -6992,6 +7010,12 @@
          "video/x-motion-jpeg" : 1
       }
    },
+   "mjs" : {
+      "mime_type" : "application/javascript",
+      "mime_types" : {
+         "application/javascript" : 1
+      }
+   },
    "mk" : {
       "mime_type" : "text/x-makefile",
       "mime_types" : {
@@ -7626,6 +7650,12 @@
       "mime_types" : {
          "application/vnd.musician" : 1,
          "x-world/x-d96" : 1
+      }
+   },
+   "musd" : {
+      "mime_type" : "application/mmt-usd\u002Bxml",
+      "mime_types" : {
+         "application/mmt-usd\u002Bxml" : 1
       }
    },
    "musicxml" : {
@@ -8385,7 +8415,8 @@
    "org" : {
       "mime_type" : "application/vnd.lotus-organizer",
       "mime_types" : {
-         "application/vnd.lotus-organizer" : 1
+         "application/vnd.lotus-organizer" : 1,
+         "text/x-org" : 1
       }
    },
    "orq" : {
@@ -8425,13 +8456,14 @@
       }
    },
    "otf" : {
-      "mime_type" : "application/font-sfnt",
+      "mime_type" : "font/otf",
       "mime_types" : {
          "application/font-sfnt" : 1,
          "application/vnd.oasis.opendocument.formula-template" : 1,
          "application/x-font-opentype" : 1,
          "application/x-font-otf" : 1,
          "font/opentype" : 1,
+         "font/otf" : 1,
          "x-font/x-opentype" : 1
       }
    },
@@ -8475,6 +8507,18 @@
       "mime_type" : "application/vnd.oasis.opendocument.text-template",
       "mime_types" : {
          "application/vnd.oasis.opendocument.text-template" : 1
+      }
+   },
+   "ova" : {
+      "mime_type" : "application/x-virtualbox-ova",
+      "mime_types" : {
+         "application/x-virtualbox-ova" : 1
+      }
+   },
+   "ovf" : {
+      "mime_type" : "application/x-virtualbox-ovf",
+      "mime_types" : {
+         "application/x-virtualbox-ovf" : 1
       }
    },
    "owl" : {
@@ -10029,6 +10073,12 @@
          "audio/x-pn-realaudio" : 1
       }
    },
+   "rapd" : {
+      "mime_type" : "application/route-apd\u002Bxml",
+      "mime_types" : {
+         "application/route-apd\u002Bxml" : 1
+      }
+   },
    "rar" : {
       "mime_type" : "application/rar",
       "mime_types" : {
@@ -10522,6 +10572,12 @@
       "mime_type" : "application/x-makeself",
       "mime_types" : {
          "application/x-makeself" : 1
+      }
+   },
+   "rusd" : {
+      "mime_type" : "application/route-usd\u002Bxml",
+      "mime_types" : {
+         "application/route-usd\u002Bxml" : 1
       }
    },
    "rv" : {
@@ -11350,6 +11406,12 @@
       "mime_type" : "text/plain",
       "mime_types" : {
          "text/plain" : 1
+      }
+   },
+   "sls" : {
+      "mime_type" : "application/route-s-tsid\u002Bxml",
+      "mime_types" : {
+         "application/route-s-tsid\u002Bxml" : 1
       }
    },
    "slt" : {
@@ -13236,6 +13298,18 @@
          "video/mpeg" : 1
       }
    },
+   "vbox" : {
+      "mime_type" : "application/x-virtualbox-vbox",
+      "mime_types" : {
+         "application/x-virtualbox-vbox" : 1
+      }
+   },
+   "vbox-extpack" : {
+      "mime_type" : "application/x-virtualbox-vbox-extpack",
+      "mime_types" : {
+         "application/x-virtualbox-vbox-extpack" : 1
+      }
+   },
    "vbproj" : {
       "mime_type" : "text/plain",
       "mime_types" : {
@@ -13334,6 +13408,12 @@
          "text/plain" : 1
       }
    },
+   "vdi" : {
+      "mime_type" : "application/x-virtualbox-vdi",
+      "mime_types" : {
+         "application/x-virtualbox-vdi" : 1
+      }
+   },
    "vdo" : {
       "mime_type" : "video/vdo",
       "mime_types" : {
@@ -13405,6 +13485,7 @@
    "vhd" : {
       "mime_type" : "text/x-vhdl",
       "mime_types" : {
+         "application/x-virtualbox-vhd" : 1,
          "text/x-vhdl" : 1
       }
    },
@@ -13472,6 +13553,12 @@
          "application/vocaltec-media-desc" : 1,
          "application/x-vocaltec-media-desc" : 1,
          "x-chemical/x-vmd" : 1
+      }
+   },
+   "vmdk" : {
+      "mime_type" : "application/x-virtualbox-vmdk",
+      "mime_types" : {
+         "application/x-virtualbox-vmdk" : 1
       }
    },
    "vmf" : {
@@ -13789,6 +13876,12 @@
       "mime_type" : "application/x-doom",
       "mime_types" : {
          "application/x-doom" : 1
+      }
+   },
+   "wadl" : {
+      "mime_type" : "application/vnd.sun.wadl\u002Bxml",
+      "mime_types" : {
+         "application/vnd.sun.wadl\u002Bxml" : 1
       }
    },
    "waf" : {
