--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -12735,19 +12735,21 @@
       }
    },
    "ttc" : {
-      "mime_type" : "application/x-font-ttf",
+      "mime_type" : "font/collection",
       "mime_types" : {
-         "application/x-font-ttf" : 1
+         "application/x-font-ttf" : 1,
+         "font/collection" : 1
       }
    },
    "ttf" : {
-      "mime_type" : "application/font-sfnt",
+      "mime_type" : "font/ttf",
       "mime_types" : {
          "application/font-sfnt" : 1,
          "application/octet-stream" : 1,
          "application/vnd.altera.quartus.internal" : 1,
          "application/x-font-truetype" : 1,
-         "application/x-font-ttf" : 1
+         "application/x-font-ttf" : 1,
+         "font/ttf" : 1
       }
    },
    "ttl" : {
@@ -14255,17 +14257,19 @@
       }
    },
    "woff" : {
-      "mime_type" : "application/font-woff",
+      "mime_type" : "font/woff",
       "mime_types" : {
          "application/font-woff" : 1,
-         "application/x-font-woff" : 1
+         "application/x-font-woff" : 1,
+         "font/woff" : 1
       }
    },
    "woff2" : {
-      "mime_type" : "application/font-woff",
+      "mime_type" : "font/woff2",
       "mime_types" : {
          "application/font-woff" : 1,
-         "application/font-woff2" : 1
+         "application/font-woff2" : 1,
+         "font/woff2" : 1
       }
    },
    "word" : {
