--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -10073,6 +10073,12 @@
          "audio/x-pn-realaudio" : 1
       }
    },
+   "raml" : {
+      "mime_type" : "application/raml\u002Byaml",
+      "mime_types" : {
+         "application/raml\u002Byaml" : 1
+      }
+   },
    "rapd" : {
       "mime_type" : "application/route-apd\u002Bxml",
       "mime_types" : {
@@ -13903,6 +13909,12 @@
       "mime_types" : {
          "application/java-archive" : 1,
          "application/x-webarchive" : 1
+      }
+   },
+   "wasm" : {
+      "mime_type" : "application/wasm",
+      "mime_types" : {
+         "application/wasm" : 1
       }
    },
    "wav" : {
