--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -4475,9 +4475,9 @@
       }
    },
    "hjson" : {
-      "mime_type" : "text/hjson",
+      "mime_type" : "application/hjson",
       "mime_types" : {
-         "text/hjson" : 1
+         "application/hjson" : 1
       }
    },
    "hlb" : {
