--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -11145,6 +11145,12 @@
          "application/x-shar" : 1
       }
    },
+   "shex" : {
+      "mime_type" : "text/shex",
+      "mime_types" : {
+         "text/shex" : 1
+      }
+   },
    "shf" : {
       "mime_type" : "application/shf\u002Bxml",
       "mime_types" : {
