--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -5601,6 +5601,7 @@
       "mime_types" : {
          "application/ecmascript" : 1,
          "application/javascript" : 1,
+         "application/node" : 1,
          "application/x-javascript" : 1,
          "text/ecmascript" : 1,
          "text/javascript" : 1
@@ -8634,6 +8635,12 @@
       "mime_type" : "application/pkcs8",
       "mime_types" : {
          "application/pkcs8" : 1
+      }
+   },
+   "p8e" : {
+      "mime_type" : "application/pkcs8-encrypted",
+      "mime_types" : {
+         "application/pkcs8-encrypted" : 1
       }
    },
    "pac" : {
