--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -2457,6 +2457,12 @@
          "text/xml" : 1
       }
    },
+   "disposition-notification" : {
+      "mime_type" : "message/disposition-notification",
+      "mime_types" : {
+         "message/disposition-notification" : 1
+      }
+   },
    "dist" : {
       "mime_type" : "application/octet-stream",
       "mime_types" : {
@@ -12906,6 +12912,30 @@
          "application/x-authorware-bin" : 1
       }
    },
+   "u8dsn" : {
+      "mime_type" : "message/global-delivery-status",
+      "mime_types" : {
+         "message/global-delivery-status" : 1
+      }
+   },
+   "u8hdr" : {
+      "mime_type" : "message/global-headers",
+      "mime_types" : {
+         "message/global-headers" : 1
+      }
+   },
+   "u8mdn" : {
+      "mime_type" : "message/global-disposition-notification",
+      "mime_types" : {
+         "message/global-disposition-notification" : 1
+      }
+   },
+   "u8msg" : {
+      "mime_type" : "message/global",
+      "mime_types" : {
+         "message/global" : 1
+      }
+   },
    "ucf" : {
       "mime_type" : "application/vnd.xilinx.user_constraints_file",
       "mime_types" : {
@@ -14429,8 +14459,9 @@
       }
    },
    "wsc" : {
-      "mime_type" : "text/scriplet",
+      "mime_type" : "message/vnd.wfa.wsc",
       "mime_types" : {
+         "message/vnd.wfa.wsc" : 1,
          "text/scriplet" : 1,
          "text/scriptlet" : 1,
          "text/x-scriplet" : 1,
