--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -2016,6 +2016,12 @@
          "text/x-script.csh" : 1
       }
    },
+   "csl" : {
+      "mime_type" : "application/vnd.citationstyles.style\u002Bxml",
+      "mime_types" : {
+         "application/vnd.citationstyles.style\u002Bxml" : 1
+      }
+   },
    "csm" : {
       "mime_type" : "chemical/x-csml",
       "mime_types" : {
