--- a/data/file-name-extensions.json
+++ b/data/file-name-extensions.json
@@ -891,6 +891,12 @@
          "application/vnd.airzip.filesecure.azs" : 1
       }
    },
+   "azv" : {
+      "mime_type" : "image/vnd.airzip.accelerator.azv",
+      "mime_types" : {
+         "image/vnd.airzip.accelerator.azv" : 1
+      }
+   },
    "azw" : {
       "mime_type" : "application/vnd.amazon.ebook",
       "mime_types" : {
@@ -2687,6 +2693,12 @@
          "application/vnd.xilinx.bitgen.design_rule_check_file" : 1
       }
    },
+   "drle" : {
+      "mime_type" : "image/dicom-rle",
+      "mime_types" : {
+         "image/dicom-rle" : 1
+      }
+   },
    "drw" : {
       "mime_type" : "application/drafting",
       "mime_types" : {
@@ -3033,9 +3045,10 @@
       }
    },
    "emf" : {
-      "mime_type" : "image/x-emf",
+      "mime_type" : "image/emf",
       "mime_types" : {
          "application/x-msmetafile" : 1,
+         "image/emf" : 1,
          "image/x-emf" : 1
       }
    },
@@ -3294,8 +3307,9 @@
       }
    },
    "exr" : {
-      "mime_type" : "image/x-exr",
+      "mime_type" : "image/aces",
       "mime_types" : {
+         "image/aces" : 1,
          "image/x-exr" : 1
       }
    },
@@ -5481,6 +5495,12 @@
          "application/x-java-keystore" : 1
       }
    },
+   "jls" : {
+      "mime_type" : "image/jls",
+      "mime_types" : {
+         "image/jls" : 1
+      }
+   },
    "jlt" : {
       "mime_type" : "application/vnd.hp-jlyt",
       "mime_types" : {
@@ -5786,6 +5806,12 @@
          "application/pgp-keys" : 1,
          "application/vnd.xilinx.internal" : 1,
          "application/x-iwork-keynote-sffkey" : 1
+      }
+   },
+   "keynote" : {
+      "mime_type" : "application/vnd.apple.keynote",
+      "mime_types" : {
+         "application/vnd.apple.keynote" : 1
       }
    },
    "kfo" : {
@@ -8039,8 +8065,9 @@
       }
    },
    "numbers" : {
-      "mime_type" : "application/x-iwork-numbers-sffnumbers",
+      "mime_type" : "application/vnd.apple.numbers",
       "mime_types" : {
+         "application/vnd.apple.numbers" : 1,
          "application/x-iwork-numbers-sffnumbers" : 1
       }
    },
@@ -8688,8 +8715,9 @@
       }
    },
    "pages" : {
-      "mime_type" : "application/x-iwork-pages-sffpages",
+      "mime_type" : "application/vnd.apple.pages",
       "mime_types" : {
+         "application/vnd.apple.pages" : 1,
          "application/x-iwork-pages-sffpages" : 1
       }
    },
@@ -8844,10 +8872,11 @@
       }
    },
    "pcx" : {
-      "mime_type" : "image/pcx",
+      "mime_type" : "image/vnd.zbrush.pcx",
       "mime_types" : {
          "application/octet-stream" : 1,
          "image/pcx" : 1,
+         "image/vnd.zbrush.pcx" : 1,
          "image/x-pcx" : 1
       }
    },
@@ -9721,9 +9750,10 @@
       }
    },
    "pti" : {
-      "mime_type" : "application/vnd.pvi.ptid1",
+      "mime_type" : "image/prs.pti",
       "mime_types" : {
-         "application/vnd.pvi.ptid1" : 1
+         "application/vnd.pvi.ptid1" : 1,
+         "image/prs.pti" : 1
       }
    },
    "ptid" : {
@@ -12241,6 +12271,12 @@
          "application/x-t3vm-image" : 1
       }
    },
+   "t38" : {
+      "mime_type" : "image/t38",
+      "mime_types" : {
+         "image/t38" : 1
+      }
+   },
    "tag" : {
       "mime_type" : "text/prs.lines.tag",
       "mime_types" : {
@@ -12264,6 +12300,12 @@
       "mime_types" : {
          "application/vnd.altera.quartus.internal" : 1,
          "application/vnd.tao.intent-module-archive" : 1
+      }
+   },
+   "tap" : {
+      "mime_type" : "image/vnd.tencent.tap",
+      "mime_types" : {
+         "image/vnd.tencent.tap" : 1
       }
    },
    "tar" : {
@@ -12464,6 +12506,12 @@
       "mime_type" : "application/x-tex-tfm",
       "mime_types" : {
          "application/x-tex-tfm" : 1
+      }
+   },
+   "tfx" : {
+      "mime_type" : "image/tiff-fx",
+      "mime_types" : {
+         "image/tiff-fx" : 1
       }
    },
    "tga" : {
@@ -13860,6 +13908,12 @@
          "application/vnd.visio" : 1
       }
    },
+   "vtf" : {
+      "mime_type" : "image/vnd.valve.source.texture",
+      "mime_types" : {
+         "image/vnd.valve.source.texture" : 1
+      }
+   },
    "vts" : {
       "mime_type" : "workbook/formulaone",
       "mime_types" : {
@@ -14251,9 +14305,10 @@
       }
    },
    "wmf" : {
-      "mime_type" : "image/x-wmf",
+      "mime_type" : "image/wmf",
       "mime_types" : {
          "application/x-msmetafile" : 1,
+         "image/wmf" : 1,
          "image/x-wmf" : 1,
          "windows/metafile" : 1,
          "x-windows/x-metafile" : 1
